--- a/sass/mixin/__responsive.scss
+++ b/sass/mixin/__responsive.scss
@@ -1,10 +1,9 @@
-@media(max-width:px){
+@media(max-width:768px){
     body {
         margin: 0;
         padding: 0;
         font-family: sans-serif;
-    }
-    
+    } 
     nav {
         display: flex;
         align-items: center;
@@ -36,7 +35,7 @@
             }
         }
         .logo {
-            height: 13vh;
+            height: 10vh;
             margin-left: 20px;
         }
     }
@@ -55,7 +54,7 @@
             margin-top: 20px;
             h2{
                 margin-top: 30px;
-                line-height: 5em;
+                line-height: -5em;
             }
             p {
                 margin-top: 10px 
