--- a/sass/component/__color-background.scss
+++ b/sass/component/__color-background.scss
@@ -1,4 +1,4 @@
-@import"component_variable";
+@import"_variable";
 .color-background {
     background-image: url(../image/home/background.png);
     width: 100%;
