--- a/css/main.css
+++ b/css/main.css
@@ -23,6 +23,7 @@ nav ul {
 }
 nav ul a {
   text-decoration: none;
+  margin-right: 30px;
 }
 nav ul a:hover {
   background-color: orange;
@@ -222,52 +223,81 @@ nav .logo {
   margin-top: 20px;
 }
 
-.footer {
+footer {
+  background-color: orange;
+  height: 70vh;
+}
+footer .footer {
   display: flex;
   justify-content: space-between;
-  background-color: orange;
   margin-top: 20px;
-  height: 70vh;
-  color: white;
+  color: #f8f9fa;
   gap: 40px;
 }
-.footer .logo-footer {
+footer .footer .logo-footer {
   margin-left: 30px;
   margin-right: 5px;
   text-align: justify;
 }
-.footer .logo-footer .img-footer {
+footer .footer .logo-footer .img-footer {
   height: 13vh;
-  margin-top: 45px;
+  margin-top: 30px;
+  margin-left: 5px;
 }
-.footer .logo-footer p {
-  margin-right: 70px;
-}
-.footer .about-us {
+footer .footer .about-us {
   margin-right: 90px;
 }
-.footer .about-us ul {
+footer .footer .about-us ul {
   margin-top: 65px;
 }
-.footer .about-us ul li {
+footer .footer .about-us ul li {
   list-style: none;
   margin-top: 20px;
 }
-.footer .quick-link {
+footer .footer .quick-link {
   margin-top: 42px;
   margin-right: 60px;
 }
-.footer .quick-link ul li {
+footer .footer .quick-link ul li {
   list-style: none;
   display: flex;
   margin-top: 20px;
 }
-.footer .quick-link ul li a {
-  color: white;
+footer .footer .quick-link ul li a {
+  color: #f8f9fa;
+  text-decoration: none;
 }
-.footer .contact-us {
+footer .footer .contact-us {
   margin-top: 42px;
-  margin-right: 20px;
+}
+footer .footer .contact-us .fa-solid {
+  width: 30px;
+  font-size: 20px;
+  margin-right: 10px;
+}
+footer hr {
+  color: grey;
+  width: 90%;
+  margin-top: 30px;
+}
+footer .new-footer {
+  color: #f8f9fa;
+  margin-top: -2px;
+}
+footer .media {
+  text-align: center;
+  margin-top: 20px;
+}
+footer .media .fa-brands {
+  font-size: 40px;
+  margin: 10px;
+}
+footer .media .fa-envelope {
+  font-size: 30px;
+}
+
+.active {
+  margin-left: -34px;
 }
 
 hr {
@@ -289,6 +319,273 @@ hr {
   font-size: 30px;
 }
 
+@media (max-width: 768px) {
+  nav {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    height: 10vh;
+    position: fixed;
+    z-index: 1000;
+    width: 100%;
+    top: 0;
+    left: 0;
+    background-color: white;
+  }
+  nav ul {
+    display: flex;
+    gap: 30px;
+    list-style-type: none;
+  }
+  nav ul a {
+    text-decoration: none;
+    margin-right: 30px;
+  }
+  nav ul a:hover {
+    background-color: orange;
+    padding: 10px;
+  }
+  nav .logo {
+    height: 8vh;
+    margin-left: 20px;
+  }
+  .color-background {
+    background-image: url(../image/home/background.png);
+    width: 100%;
+    height: 30vh;
+    background-size: cover;
+    text-align: center;
+    color: white;
+  }
+  .color-background .background {
+    height: 30vh;
+    background: rgba(3, 37, 61, 0.7);
+  }
+  .color-background .background h2 {
+    margin-top: 1px;
+    line-height: 10em;
+  }
+  .color-background .background p {
+    display: none;
+  }
+  .about {
+    display: flex;
+    height: 50vh;
+    justify-content: space-between;
+    margin-top: 50px;
+  }
+  .about .left {
+    width: 50%;
+    height: 50vh;
+    -o-object-fit: cover;
+       object-fit: cover;
+  }
+  .about .img-right {
+    background-image: url(../image/home/students.png);
+    width: 50%;
+    background-size: cover;
+  }
+  .about .img-right .right {
+    background: rgba(3, 37, 61, 0.7);
+    width: 100%;
+    height: 50vh;
+    color: white;
+    margin-top: -20px;
+  }
+  .about .img-right .right h2 {
+    margin-left: 10px;
+    line-height: 3em;
+  }
+  .about .img-right .right p {
+    margin-left: 10px;
+    margin-right: 10px;
+    text-align: justify;
+  }
+  .selection {
+    background-image: url(../image/home/selection.png);
+    width: 100%;
+    height: 40vh;
+    margin-top: 25px;
+    background-size: cover;
+    display: flex;
+  }
+  .selection .selec-img {
+    background: rgba(3, 37, 61, 0.7);
+    color: white;
+    height: 40vh;
+  }
+  .selection .selec-img h2 {
+    margin-top: 65px;
+    margin-left: 10px;
+    line-height: 3em;
+  }
+  .training h2 {
+    margin-left: 20px;
+  }
+  .training p {
+    margin-left: 20px;
+    margin-right: 20px;
+    text-align: justify;
+  }
+  .skill {
+    color: black;
+    grid-template-columns: 1fr;
+    display: grid;
+  }
+  .skill .web {
+    background-image: url(none);
+    width: 100%;
+    height: 20vh;
+    background-size: cover;
+  }
+  .skill .web .tecnical {
+    background: white;
+    height: 20vh;
+    margin-top: -20px;
+  }
+  .skill .web .tecnical h4 {
+    margin-top: 20px;
+    margin-left: 30px;
+  }
+  .skill .web .tecnical ul {
+    margin-top: -23px;
+  }
+  .skill .web .tecnical ul li {
+    margin-top: 8px;
+  }
+  .skill .general {
+    background-color: white;
+    width: 100%;
+  }
+  .skill .general h4 {
+    margin-top: 20px;
+    margin-left: 20px;
+  }
+  .skill .general p {
+    margin-left: 20px;
+    margin-right: 20px;
+    text-align: justify;
+  }
+  .skill .social {
+    background-image: url(none);
+    width: 100%;
+    height: 20vh;
+    background-size: cover;
+  }
+  .skill .social .social-img {
+    background: white;
+    width: 100%;
+    height: 20vh;
+    margin-top: -50vh;
+    -o-object-fit: cover;
+       object-fit: cover;
+    text-align: justify;
+  }
+  .skill .social .social-img h4 {
+    margin-left: 20px;
+  }
+  .skill .social .social-img p {
+    margin-left: 20px;
+    margin-right: 20px;
+    text-align: justify;
+  }
+  .jop .job-image {
+    background-image: url(none);
+    width: 50%;
+    height: 70vh;
+    background-size: cover;
+  }
+  .jop .job-image .grauate {
+    background: white;
+    height: 60vh;
+    margin-top: -59vh;
+  }
+  .jop .job-image .grauate h2 {
+    line-height: 3em;
+    margin-left: 20px;
+  }
+  .jop .job-image .grauate p {
+    color: black;
+    margin-left: 20px;
+    margin-right: 20px;
+    text-align: justify;
+  }
+  .jop .graduate-right {
+    -o-object-fit: cover;
+       object-fit: cover;
+    width: 50%;
+    height: 20vh;
+    margin: 20px;
+    margin-top: -50vh;
+  }
+  .footer {
+    display: flex;
+    justify-content: space-between;
+    background-color: orange;
+    margin-top: 20px;
+    height: 70vh;
+    color: white;
+    gap: 40px;
+  }
+  .footer .logo-footer {
+    margin-left: 30px;
+    margin-right: 5px;
+    text-align: justify;
+  }
+  .footer .logo-footer .img-footer {
+    height: 13vh;
+    margin-top: 45px;
+  }
+  .footer .logo-footer p {
+    margin-right: 70px;
+  }
+  .footer .about-us {
+    margin-right: 90px;
+  }
+  .footer .about-us ul {
+    margin-top: 65px;
+  }
+  .footer .about-us ul li {
+    list-style: none;
+    margin-top: 20px;
+  }
+  .footer .quick-link {
+    margin-top: 42px;
+    margin-right: 60px;
+  }
+  .footer .quick-link ul li {
+    list-style: none;
+    display: flex;
+    margin-top: 20px;
+  }
+  .footer .quick-link ul li a {
+    color: white;
+  }
+  .footer .contact-us {
+    margin-top: 42px;
+    margin-right: 20px;
+  }
+  hr {
+    margin-top: -98px;
+    color: white;
+  }
+  .media {
+    text-align: center;
+    margin-top: 30px;
+  }
+  .media .fa-brands {
+    width: 50px;
+    height: 50px;
+    font-size: 30px;
+  }
+  .media .fa-solid {
+    width: 50px;
+    font-size: 30px;
+  }
+  strong {
+    color: orange;
+  }
+}
 strong {
   color: orange;
 }/*# sourceMappingURL=main.css.map */
