--- a/sass/component/__about.scss
+++ b/sass/component/__about.scss
@@ -1,5 +1,5 @@
-@import"component/variable";
-@import"component/_group-mixin";
+@import"variable";
+@import"_group-mixin";
 .about {
     @include alined-item;
     height: 60vh;
