--- a/sass/component/__selection.scss
+++ b/sass/component/__selection.scss
@@ -1,5 +1,5 @@
-@import"component/variable";
-@import"component/_group-mixin";
+@import"_variable";
+@import"_group-mixin";
 .selection{   
     background-image: url(../image/home/selection.png);
     // width: 100%;
