--- a/sass/mixin/__responsive.scss
+++ b/sass/mixin/__responsive.scss
@@ -1,14 +1,9 @@
-@media(max-width:768px){
-    body {
-        margin: 0;
-        padding: 0;
-        font-family: sans-serif;
-    } 
+@media (max-width:768px){
     nav {
         display: flex;
         align-items: center;
         justify-content: space-between;
-        height: 15vh;
+        height: 10vh;
         position: fixed;
         z-index: 1000;
         width: 100%;
@@ -26,6 +21,7 @@
     
             a {
                 text-decoration: none;
+                margin-right: 30px;
             }
     
             a:hover {
@@ -35,40 +31,40 @@
             }
         }
         .logo {
-            height: 10vh;
+            height: 8vh;
             margin-left: 20px;
         }
     }
     
+    
     .color-background {
         background-image: url(../image/home/background.png);
         width: 100%;
-        height: 55vh;
-        margin-top: 80px;
+        height: 30vh;
+        background-size: cover;
         text-align: center;
         color: white;
     
         .background {
-            height: 55vh;
+            height: 30vh;
             background: rgba(3, 37, 61, 0.7);
-            margin-top: 20px;
             h2{
-                margin-top: 30px;
-                line-height: -5em;
+                margin-top: 1px;
+                line-height: 10em;
             }
             p {
-                margin-top: 10px 
+                display: none;
             }
         }
     }
     .about {
         display: flex;
-        height: 60vh;
+        height: 50vh;
         justify-content: space-between;
         margin-top: 50px;
         .left {
             width: 50%;
-            height: 60vh;
+            height: 50vh;
             object-fit: cover;
         }
         .img-right {
@@ -78,19 +74,16 @@
             .right {
                 background: rgba(3, 37, 61, 0.7);
                 width: 100%;
-                height: 60vh;
+                height: 50vh;
                 color: white;
-                margin-top: -20px;
-                
+                margin-top: -20px;               
                 h2{
-                    margin-left: 40px;
-                    line-height: 3em;
-                    
+                    margin-left: 10px;
+                    line-height: 3em;   
                 }
                 p {
-                    margin-left: 40px;
-                    margin-right: 40px;
-                    margin-top: -20px;
+                    margin-left: 10px;
+                    margin-right: 10px;
                     text-align: justify;
                 }
             }
@@ -98,62 +91,56 @@
     }
     .selection{   
         background-image: url(../image/home/selection.png);
-        // width: 100%;
-        height: 65vh;
+        width: 100%;
+        height: 40vh;
         margin-top: 25px;
         background-size: cover;
+        display: flex;
         .selec-img{
-            // display: flex;
-            justify-content: space-between;
-            gap: 30px;
             background:rgba(3, 37, 61, 0.7);
             color: white;
             // width: 100%;
-            height: 65vh;
+            height: 40vh;
             h2{
                 margin-top: 65px;
-                margin-left: 50px; 
+                margin-left: 10px; 
                 line-height: 3em;  
             }
             p{
-                margin-top: 70px;
-                text-align: justify;
-                margin-right: 40px;
-                margin-top: -8px;
-                margin-left: 50px;
-                margin-right: 50px;
+               
             }
         }
     }
     .training{
         h2{
-            margin-left: 50px;
+            margin-left: 20px;
         }
         p{
-            margin-left: 50px;
-            margin-right: 50px;
+            margin-left: 20px;
+            margin-right: 20px;
             text-align: justify;
         }
     
     }
     .skill{
-        // width: 33%;
-        color: white;
-        margin-top: 30px;
-        display: flex;
+        // width: 100%;
+        color:black;
+        // margin-top: 30px;
+        grid-template-columns: 1fr ;
+        display: grid;
         .web{
-            background-image: url(../image/home/web.png);
-            width: 33.3%;
-            height: 60vh;
+            background-image: url(none);
+            width: 100%;
+            height: 20vh;
             background-size: cover;
             .tecnical{
-                background:rgba(3, 37, 61, 0.7);
-                height: 60vh; 
+                background:white;
+                height: 20vh; 
                 margin-top: -20px;
                 h4{
                     margin-top: 20px;
-                    margin-left: 20px;
-                    line-height: 3.9em;
+                    margin-left: 30px;
+                    // line-height: 3.9em;
                 }
                 ul{
                     margin-top: -23px;
@@ -165,9 +152,10 @@
     
         }
         .general{
-            background-color: rgb(27, 41, 69);
-            width: 33.3%;
-            height: 60vh;
+            background-color: white;
+            // line-height: -50;
+            width: 100%;
+            // height: 10px;
             h4{
                 margin-top: 20px;
                 margin-left: 20px;
@@ -179,50 +167,54 @@
             }
         }
         .social{
-            background-image: url(../image/home/social.png);
-            width: 33.3%;
-            height: 60vh;
+            background-image: url(none);
+            width: 100%;
+            height: 20vh;
             background-size: cover;
+            // margin-top: -70px;
             .social-img{
-                background:rgba(3, 37, 61, 0.7);
+                background:white;
                 width: 100%;
-                height: 60vh;
-                margin-top: -21px;
+                height: 20vh;
+                margin-top: -50vh;
                 object-fit: cover;
                 text-align: justify;
                 h4{
                     margin-left: 20px;
-                    line-height: 3.9em;
+                    // line-height: 3.9em;
                 }
                 p{
                     margin-left: 20px;
                     margin-right: 20px;
-                    margin-top: -24px;
+                    text-align: justify;
+                    // margin-top: -24px;
                 }
             }
         }
     }
     .jop{
-        display: flex;
+        // display: flex;
         .job-image{
-            background-image: url(../image/home/job.png);
+            background-image: url(none);
             width: 50%;
-            height: 60vh;
+            height: 70vh;
             background-size: cover;
-            margin-top: 20px;
+            // margin-top: -20vh;
             .grauate{
-                background:rgba(3, 37, 61, 0.7);
+                background:white;
                 height: 60vh;
-                margin-top: -20px;
+                margin-top: -59vh;
                 h2{
                     line-height: 3em;
                     margin-left: 20px;
+                    // margin-top: -70px;
+
                 }
                 p{
-                    color: white;
+                    color:black;
                     margin-left: 20px;
                     margin-right: 20px;
-                    margin-top: -20px;
+                    // margin-top: -60vh;
                     text-align: justify;
                 }
             }
@@ -230,9 +222,9 @@
         .graduate-right{
             object-fit: cover;
             width: 50%;
-            height: 60vh; 
-            margin-top: 20px;
-           
+            height: 20vh; 
+            margin: 20px;
+            margin-top: -50vh;  
         }
     }
     .footer{
