--- a/sass/about.scss
+++ b/sass/about.scss
@@ -6,7 +6,7 @@ body{
 }
 @import"component/__containers";
 @import"component/__nav";
-@import"mixin/responsive_about.scss";
+@import"mixin/_responsive_about";
 @import"component/__main-cards";
 @import "component/__variable";
 @import "component/__footer";
