--- a/sass/component/__containers.scss
+++ b/sass/component/__containers.scss
@@ -1,5 +1,5 @@
 @import"../component/_variable";
-@import"../mixin/responsive_about.scss";
+@import"../mixin/responsive_about";
 
 .container{
     background:#fff;
