--- a/sass/component/__slide.scss
+++ b/sass/component/__slide.scss
@@ -1,5 +1,5 @@
 .slide-sor{
-    box-shadow: rgba(67, 71, 85, 0.27) 0px 0px 0.25em, rgba(90, 125, 188, 0.05) 0px 0.25em 1em;
+  background: #6e7788;
   }
   .carousel-slide {
     display: flex;
@@ -11,16 +11,13 @@
   
   .carousel-item {
     width:23% ;
-    // width: 300px;
     height: 300px;
-    // flex: 0 0 100%;
     transition: opacity 1s ease-in-out;
     // animation: slide-animation 2s infinite;
   
     display: flex;
     align-items: center;
     gap: 20px;
-    // justify-content: center;
     position: relative;
   }
   
