--- a/css/main.css
+++ b/css/main.css
@@ -5,33 +5,82 @@ body {
 }
 
 nav {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  height: 15vh;
   position: fixed;
-  z-index: 1000;
-  width: 100%;
-  top: 0;
+  z-index: 38;
   left: 0;
-  background-color: white;
-}
-nav ul {
-  display: flex;
-  gap: 30px;
-  list-style-type: none;
-}
-nav ul a {
-  text-decoration: none;
-  margin-right: 30px;
-}
-nav ul a:hover {
-  background-color: orange;
+  top: 0;
+  width: 100%;
   padding: 10px;
+  background-color: white;
+  border-bottom: 0 2px 6px 8px white;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 nav .logo {
   height: 13vh;
+  width: 15%;
+}
+nav ul {
+  display: flex;
+  gap: 20px;
+  list-style-type: none;
+  margin-right: 40px;
+}
+nav ul li a:hover {
+  padding: 10px 10px;
+  background: orange;
+  text-decoration: underline;
+  text-decoration: none;
+}
+nav ul a {
+  text-decoration: none;
+  font-size: 20px;
+}
+
+.dropstart {
+  position: relative;
+  display: inline-block;
+  display: none;
+}
+
+.fa-sape {
   margin-left: 20px;
+}
+
+.dropdown-menus {
+  display: none;
+  position: absolute;
+  left: -100px;
+  top: 20px;
+  background-color: grey;
+  min-width: 160px;
+  border-radius: 5px;
+  z-index: 1;
+  padding: 0;
+}
+
+.dropstart:hover .dropdown-menus {
+  display: block;
+}
+
+.dropdown-items {
+  color: white;
+  padding: 10px 20px;
+  text-decoration: none;
+  display: block;
+  background-color: transparent;
+}
+
+.dropdown-items:hover {
+  background-color: white;
+  color: white;
+}
+
+.dropdown-dividers {
+  height: 1px;
+  background-color: white;
+  margin: 5px 0;
 }
 
 .color-background {
@@ -231,7 +280,7 @@ footer .footer {
   display: flex;
   justify-content: space-between;
   margin-top: 20px;
-  color: #f8f9fa;
+  color: white;
   gap: 40px;
 }
 footer .footer .logo-footer {
@@ -264,7 +313,7 @@ footer .footer .quick-link ul li {
   margin-top: 20px;
 }
 footer .footer .quick-link ul li a {
-  color: #f8f9fa;
+  color: white;
   text-decoration: none;
 }
 footer .footer .contact-us {
@@ -281,7 +330,7 @@ footer hr {
   margin-top: 30px;
 }
 footer .new-footer {
-  color: #f8f9fa;
+  color: white;
   margin-top: -2px;
 }
 footer .media {
@@ -481,12 +530,12 @@ hr {
        object-fit: cover;
     text-align: justify;
   }
-  .skill .social .social-img h4 {
+  .skill .social .social-img h2 {
     margin-left: 20px;
+    margin-top: 40vh;
   }
   .skill .social .social-img p {
-    margin-left: 20px;
-    margin-right: 20px;
+    margin: 30px;
     text-align: justify;
   }
   .jop .job-image {
@@ -497,7 +546,7 @@ hr {
   }
   .jop .job-image .grauate {
     background: white;
-    height: 60vh;
+    height: 5vh;
     margin-top: -59vh;
   }
   .jop .job-image .grauate h2 {
@@ -518,72 +567,235 @@ hr {
     margin: 20px;
     margin-top: -50vh;
   }
-  .footer {
-    display: flex;
-    justify-content: space-between;
+  footer {
     background-color: orange;
+    height: 60vh;
+    margin-top: -100vh;
+  }
+  footer .footer {
     margin-top: 20px;
-    height: 70vh;
     color: white;
     gap: 40px;
   }
-  .footer .logo-footer {
+  footer .footer .logo-footer {
     margin-left: 30px;
     margin-right: 5px;
     text-align: justify;
   }
-  .footer .logo-footer .img-footer {
+  footer .footer .logo-footer .img-footer {
     height: 13vh;
-    margin-top: 45px;
+    margin-top: 10vh;
+    margin-left: 5px;
   }
-  .footer .logo-footer p {
-    margin-right: 70px;
+  footer .footer .logo-footer p {
+    display: none;
   }
-  .footer .about-us {
-    margin-right: 90px;
-  }
-  .footer .about-us ul {
-    margin-top: 65px;
-  }
-  .footer .about-us ul li {
+  footer .footer .about-us li {
     list-style: none;
+    display: none;
     margin-top: 20px;
   }
-  .footer .quick-link {
-    margin-top: 42px;
+  footer .quick-link {
+    margin-top: 30vh;
     margin-right: 60px;
   }
-  .footer .quick-link ul li {
+  footer .quick-link ul li {
     list-style: none;
     display: flex;
     margin-top: 20px;
+    margin-left: -53vh;
   }
-  .footer .quick-link ul li a {
+  footer .quick-link ul li a {
     color: white;
+    text-decoration: none;
   }
-  .footer .contact-us {
+  footer .quick-link h4 {
+    margin-top: 20vh;
+    margin-left: -53vh;
+  }
+  footer .contact-us {
     margin-top: 42px;
-    margin-right: 20px;
+  }
+  footer .contact-us .fa-solid {
+    width: 30px;
+    font-size: 20px;
+    margin-left: -30vh;
+    margin-right: -10px;
+  }
+  footer .contact-us h4 {
+    margin-top: 9vh;
+    margin-left: -32vh;
+  }
+  footer .contact-us p {
+    display: flex;
+    margin-left: -30px;
   }
   hr {
-    margin-top: -98px;
-    color: white;
-  }
-  .media {
-    text-align: center;
+    color: grey;
+    width: 90%;
     margin-top: 30px;
   }
+  .new-footer {
+    color: white;
+    margin-left: -70vh;
+    margin-top: -50px;
+  }
+  .media {
+    margin-top: 20px;
+    margin-right: -56vh;
+  }
   .media .fa-brands {
-    width: 50px;
-    height: 50px;
-    font-size: 30px;
+    font-size: 40px;
   }
-  .media .fa-solid {
-    width: 50px;
-    font-size: 30px;
+}
+@media (max-width: 390px) {
+  nav {
+    position: fixed;
+    z-index: 38;
+    left: 0;
+    top: 0;
+    width: 100%;
+    padding: 10px;
+    background-color: white;
+    border-bottom: 0 2px 6px 8px white;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
   }
-  strong {
-    color: orange;
+  nav .logo {
+    height: 10vh;
+    width: 40%;
+    margin-left: 20px;
+  }
+  nav ul {
+    display: flex;
+    gap: 20px;
+    list-style-type: none;
+    margin-right: 40px;
+  }
+  nav ul li a:hover {
+    padding: 10px 10px;
+    background: orange;
+    text-decoration: underline;
+    text-decoration: none;
+  }
+  nav ul a {
+    text-decoration: none;
+    font-size: 20px;
+    display: none;
+  }
+  .dropstart {
+    position: relative;
+    display: inline-block;
+  }
+  .fa-sape {
+    margin-left: 20px;
+  }
+  .dropdown-menus {
+    display: none;
+    position: absolute;
+    left: -100px;
+    top: 20px;
+    background-color: orange;
+    min-width: 160px;
+    border-radius: 5px;
+    z-index: 1;
+    padding: 0;
+  }
+  .dropstart:hover .dropdown-menus {
+    display: block;
+  }
+  .dropdown-items {
+    padding: 10px 20px;
+    text-decoration: none;
+    display: block;
+    background-color: transparent;
+  }
+  .dropdown-items:hover {
+    background-color: white;
+  }
+  .dropdown-dividers {
+    height: 1px;
+    background-color: white;
+    margin: 5px;
+  }
+  .color-background {
+    background-image: url(../image/home/background.png);
+    width: 100%;
+    height: 30vh;
+    background-size: cover;
+    text-align: center;
+    color: white;
+  }
+  .color-background .background {
+    height: 30vh;
+    background: rgba(3, 37, 61, 0.7);
+  }
+  .color-background .background h2 {
+    margin-top: -30px;
+    line-height: 10em;
+  }
+  .color-background .background p {
+    display: none;
+  }
+  .about {
+    display: flex;
+    flex-direction: column-reverse;
+    margin: 20px;
+    height: 60vh;
+    margin-top: 50vh;
+  }
+  .about .left {
+    width: 100%;
+    height: 30vh;
+    -o-object-fit: cover;
+       object-fit: cover;
+    margin-bottom: 30vh;
+  }
+  .about .img-right {
+    background-image: url(none);
+    width: 100%;
+    background-size: cover;
+  }
+  .about .img-right .right {
+    background: none;
+    width: 100%;
+    height: 20vh;
+    color: black;
+    margin-top: -80px;
+  }
+  .about .img-right .right h2 {
+    margin-left: -10px;
+    margin-top: -50vh;
+    line-height: 3em;
+  }
+  .about .img-right .right p {
+    margin-top: -20px;
+    text-align: justify;
+  }
+  .selection {
+    background-image: url(../image/home/selection.png);
+    display: flex;
+    flex-direction: column-reverse;
+    width: 100%;
+    height: 30vh;
+  }
+  .selection .selec-img {
+    flex-direction: column-reverse;
+    gap: 30px;
+    background: none;
+    color: black;
+    margin-left: 20px;
+    margin-right: 20px;
+  }
+  .selection .selec-img h2 {
+    margin-left: 50px;
+    line-height: -50vh;
+  }
+  .selection .selec-img p {
+    margin-top: -80vh;
+    text-align: justify;
+    margin: -10px;
   }
 }
 strong {
