--- a/sass/component/__color-background-home.scss
+++ b/sass/component/__color-background-home.scss
@@ -1,4 +1,4 @@
-@import"_variable";
+@import"_variable-home";
 .color-background {
     background-image: url(../image/home/background.png);
     width: 100%;
