--- a/sass/component/__selection-home.scss
+++ b/sass/component/__selection-home.scss
@@ -1,5 +1,5 @@
-@import"_variable";
-@import"_group-mixin";
+@import"_variable-home";
+@import"_group-mixin-home";
 .selection{   
     background-image: url(../image/home/selection.png);
     // width: 100%;
