--- a/sass/component/__contactform-login.scss
+++ b/sass/component/__contactform-login.scss
@@ -1,5 +1,5 @@
 .form-login{
-    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    box-shadow: $bg-boxsado;
     display: flex;
     justify-content: space-around;
     width: 97%;
