--- a/sass/component/__contactcolor-1.scss
+++ b/sass/component/__contactcolor-1.scss
@@ -1,3 +1,4 @@
+@import"../component/_contactvariable";
 .color1{
     background: $bg-bady;
     clip-path: polygon(31% 0, 14% 51%, 28% 100%, 14% 100%, 0 51%, 17% 0);
