--- a/sass/component/__contactcolor.scss
+++ b/sass/component/__contactcolor.scss
@@ -1,5 +1,6 @@
+@import"../component/_contactvariable";
 .color{
-    background: rgba(113, 219, 248, 0.885);
+    background:$bg-lightblue;
     clip-path: polygon(36% 0, 23% 52%, 32% 100%, 0 100%, 0% 50%, 0 0);
     padding: 90px;
     width: 80%;
