--- a/css/about.css
+++ b/css/about.css
@@ -1585,6 +1585,9 @@ nav ul a {
   border-radius: 10px 10px 0px 0px;
   box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
   text-align: center;
+  background-size: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 .card-tops {
