--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,3 @@
-<<<<<<< HEAD
-/*# sourceMappingURL=main.css.map */
-=======
 body {
   margin: 0;
   padding: 0;
@@ -680,12 +677,13 @@ hr {
     padding: 10px 10px;
     background: orange;
     text-decoration: underline;
-    text-decoration: none;
+    color: orange;
   }
   nav ul a {
     text-decoration: none;
     font-size: 20px;
     display: none;
+    color: orange;
   }
   .dropstart {
     position: relative;
@@ -735,7 +733,6 @@ hr {
     background: rgba(3, 37, 61, 0.7);
   }
   .color-background .background h2 {
-    margin-top: -30px;
     line-height: 10em;
   }
   .color-background .background p {
@@ -744,7 +741,6 @@ hr {
   .about {
     display: flex;
     flex-direction: column-reverse;
-    margin: 20px;
     height: 60vh;
     margin-top: 50vh;
   }
@@ -753,7 +749,7 @@ hr {
     height: 30vh;
     -o-object-fit: cover;
        object-fit: cover;
-    margin-bottom: 30vh;
+    margin-bottom: 40vh;
   }
   .about .img-right {
     background-image: url(none);
@@ -768,8 +764,8 @@ hr {
     margin-top: -80px;
   }
   .about .img-right .right h2 {
-    margin-left: -10px;
-    margin-top: -50vh;
+    margin-left: 10px;
+    margin-top: -40vh;
     line-height: 3em;
   }
   .about .img-right .right p {
@@ -778,13 +774,13 @@ hr {
   }
   .selection {
     background-image: url(../image/home/selection.png);
-    display: flex;
-    flex-direction: column-reverse;
     width: 100%;
     height: 30vh;
   }
   .selection .selec-img {
+    display: flex;
     flex-direction: column-reverse;
+    justify-content: space-between;
     gap: 30px;
     background: none;
     color: black;
@@ -792,16 +788,199 @@ hr {
     margin-right: 20px;
   }
   .selection .selec-img h2 {
-    margin-left: 50px;
+    margin-left: 10px;
     line-height: -50vh;
+    line-height: 30vh;
   }
   .selection .selec-img p {
-    margin-top: -80vh;
+    margin-top: -88vh;
     text-align: justify;
     margin: -10px;
+  }
+  .training h2 {
+    margin-left: 10px;
+  }
+  .training p {
+    margin-left: 10px;
+    margin-right: 10px;
+    text-align: justify;
+  }
+  .skill {
+    color: white;
+    margin-top: 30px;
+  }
+  .skill .web {
+    background-image: url(../image/home/web.png);
+    width: 100%;
+    height: 40vh;
+    background-size: cover;
+  }
+  .skill .web .tecnical {
+    background: rgba(3, 37, 61, 0.7);
+    height: 40vh;
+    margin-top: -20px;
+  }
+  .skill .web .tecnical h4 {
+    margin-top: 20px;
+    margin-left: 20px;
+    line-height: 3.9em;
+  }
+  .skill .web .tecnical ul {
+    margin-top: -23px;
+  }
+  .skill .web .tecnical ul li {
+    margin-top: 8px;
+  }
+  .skill .general {
+    background-color: rgb(27, 41, 69);
+    width: 100%;
+    height: 40vh;
+    margin-top: 10px;
+  }
+  .skill .general h4 {
+    margin-top: 20px;
+    margin-left: 20px;
+  }
+  .skill .general p {
+    margin-left: 20px;
+    margin-right: 20px;
+    text-align: justify;
+  }
+  .skill .social {
+    background-image: url(../image/home/social.png);
+    width: 100%;
+    height: 40vh;
+    background-size: cover;
+    margin-top: 10px;
+  }
+  .skill .social .social-img {
+    background: rgba(3, 37, 61, 0.7);
+    width: 100%;
+    height: 40vh;
+    margin-top: -21px;
+    -o-object-fit: cover;
+       object-fit: cover;
+    text-align: justify;
+  }
+  .skill .social .social-img h4 {
+    margin-left: 20px;
+    line-height: 3.9em;
+  }
+  .skill .social .social-img p {
+    margin-left: 20px;
+    margin-right: 20px;
+    margin-top: -24px;
+  }
+  .jop .job-image {
+    background-image: url(../image/home/job.png);
+    width: 100%;
+    height: 30vh;
+    background-size: cover;
+    margin-top: 20px;
+  }
+  .jop .job-image .grauate {
+    background: rgba(3, 37, 61, 0.7);
+    height: 30vh;
+    margin-top: -20px;
+  }
+  .jop .job-image .grauate h2 {
+    line-height: 3em;
+    margin-left: 20px;
+  }
+  .jop .job-image .grauate p {
+    color: white;
+    margin-left: 20px;
+    margin-right: 20px;
+    margin-top: -20px;
+    text-align: justify;
+  }
+  .jop .graduate-right {
+    display: none;
+    -o-object-fit: cover;
+       object-fit: cover;
+    width: 100%;
+    height: 40vh;
+    margin-top: 20px;
+  }
+  footer {
+    background-color: orange;
+    height: 50vh;
+    margin-top: 10px;
+  }
+  footer .footer {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 20px;
+    color: white;
+  }
+  footer .footer .logo-footer {
+    margin-left: 5px;
+    margin-right: 5px;
+    text-align: justify;
+  }
+  footer .footer .logo-footer .img-footer {
+    height: 10vh;
+    margin-top: 30px;
+    margin-left: 5px;
+  }
+  footer .footer .about-us {
+    margin-right: 90px;
+  }
+  footer .footer .about-us p {
+    font-size: 40px;
+  }
+  footer .footer .about-us ul {
+    margin-top: 65px;
+  }
+  footer .footer .about-us ul li {
+    list-style: none;
+    margin-top: 20px;
+  }
+  footer .footer .quick-link {
+    margin-top: 42px;
+    margin-right: 60px;
+    display: none;
+  }
+  footer .footer .contact-us {
+    margin-top: 40px;
+    margin-left: -19vh;
+  }
+  footer .footer .contact-us .fa-solid {
+    width: 30px;
+    font-size: 20px;
+    margin-right: 10px;
+  }
+  footer hr {
+    color: grey;
+    width: 90%;
+    margin-top: -5px;
+  }
+  footer .new-footer {
+    color: white;
+    margin-top: -2px;
+  }
+  footer .media {
+    text-align: center;
+    margin-top: 20px;
+  }
+  footer .media p {
+    text-align: center;
+    margin-right: -10vh;
+  }
+  footer .media .fa-brands {
+    display: none;
+    font-size: 30px;
+    margin-left: -30vh;
+    margin-top: -90vh;
+    margin-bottom: -90vh;
+  }
+  footer .media .fa-envelope {
+    font-size: 20px;
+  }
+  .active {
+    margin-left: -34px;
   }
 }
 strong {
   color: orange;
 }/*# sourceMappingURL=main.css.map */
->>>>>>> home-page
