--- a/css/about.css
+++ b/css/about.css
@@ -342,7 +342,7 @@ body {
     margin-top: -2px;
   }
   footer .media {
-    text-align: center;
+    margin-left: -30px;
     margin-top: 20px;
   }
   footer .media .fa-brands {
@@ -451,6 +451,188 @@ body {
   }
   .btn-read:hover {
     background: orange;
+  }
+}
+@media (max-width: 390px) {
+  nav {
+    position: fixed;
+    z-index: 38;
+    left: 0;
+    top: 0;
+    width: 100%;
+    padding: 10px;
+    background-color: rgb(255, 255, 255);
+    border-bottom: 0 2px 6px 8px solid grey;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+  nav .logo {
+    height: 10vh;
+    width: 40%;
+  }
+  nav ul {
+    display: flex;
+    gap: 20px;
+    list-style-type: none;
+    margin-right: 40px;
+  }
+  nav ul li a:hover {
+    padding: 10px 10px;
+    background: orange;
+    text-decoration: underline;
+    text-decoration: none;
+  }
+  nav ul a {
+    text-decoration: none;
+    font-size: 20px;
+    display: none;
+  }
+  .dropstart {
+    position: relative;
+    display: inline-block;
+  }
+  .fa-sape {
+    margin-left: 20px;
+  }
+  .dropdown-menus {
+    position: absolute;
+    left: -100px;
+    top: 20px;
+    background-color: orange;
+    min-width: 160px;
+    border-radius: 5px;
+    z-index: 1;
+    padding: 0;
+  }
+  .dropstart:hover .dropdown-menus {
+    display: block;
+  }
+  .dropdown-items {
+    color: rgb(255, 255, 255);
+    padding: 10px 20px;
+    text-decoration: none;
+    display: block;
+    background-color: transparent;
+  }
+  .dropdown-items:hover {
+    background-color: #a8b1b9;
+    color: rgb(255, 255, 255);
+  }
+  .dropdown-dividers {
+    height: 1px;
+    background-color: #a8b1b9;
+    margin: 5px 0;
+  }
+  .container {
+    background: #fff;
+    position: absolute;
+    top: 100px;
+  }
+  .contner-mid {
+    height: 170px;
+    overflow-y: auto;
+    overflow-x: hidden;
+    scrollbar-width: none;
+    padding: 10px;
+  }
+  .container1 {
+    background-color: #d9d9d9;
+    display: flex;
+    justify-content: space-around;
+    height: 70vh;
+    gap: 90px;
+  }
+  .container1 .page-right {
+    margin-top: 30px;
+  }
+  .container1 h1 {
+    margin: 10px;
+    font-size: 2.8em;
+  }
+  .container1 h1 strong {
+    color: orange;
+  }
+  .container1 p {
+    margin: 10px;
+    margin-left: 20px;
+  }
+  .container1 hr {
+    padding: 1px;
+    width: 20%;
+    background-color: black;
+    margin: 10px;
+  }
+  .container1 .button {
+    display: flex;
+    gap: 10px;
+  }
+  .container1 .button .btn1 {
+    background: orange;
+    border-radius: 10px;
+    margin-left: 10px;
+    margin-top: 10px;
+    width: 20%;
+    height: 7vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .container1 .button .btn1:hover {
+    background-color: orange;
+    color: white;
+  }
+  .container1 .button .btn2 {
+    border-radius: 10px;
+    margin-left: 10px;
+    margin-top: 10px;
+    width: 30%;
+    height: 7vh;
+    background-color: #29A9B2;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .container1 .button .btn2 .fa-solid {
+    margin-left: 10px;
+  }
+  .container1 .button .btn2:hover {
+    background-color: #29A9B2;
+    color: white;
+  }
+  .container2 {
+    display: flex;
+    justify-content: space-between;
+    margin: 80px;
+    margin-top: 90px;
+    gap: 50px;
+  }
+  .container2 .contaner-right {
+    background: #6e7788;
+    height: 47vh;
+    width: 70%;
+    border-radius: 10px;
+    padding: 15px;
+  }
+  .container2 h2 {
+    font-size: 1.6em;
+    color: orange;
+    margin: 10px;
+  }
+  .container2 strong {
+    color: orange;
+  }
+  .container2 .coontainer-left {
+    margin-left: 40px;
+  }
+  .container2 .paragrap {
+    margin-top: 10px;
+    padding: 10px;
+    color: white;
+  }
+  .container2 h3 {
+    color: orange;
+    margin-top: 10px;
   }
 }
 .container {
@@ -905,7 +1087,7 @@ body {
     margin-top: -2px;
   }
   footer .media {
-    text-align: center;
+    margin-left: -30px;
     margin-top: 20px;
   }
   footer .media .fa-brands {
@@ -1014,6 +1196,188 @@ body {
   }
   .btn-read:hover {
     background: orange;
+  }
+}
+@media (max-width: 390px) {
+  nav {
+    position: fixed;
+    z-index: 38;
+    left: 0;
+    top: 0;
+    width: 100%;
+    padding: 10px;
+    background-color: rgb(255, 255, 255);
+    border-bottom: 0 2px 6px 8px solid grey;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+  nav .logo {
+    height: 10vh;
+    width: 40%;
+  }
+  nav ul {
+    display: flex;
+    gap: 20px;
+    list-style-type: none;
+    margin-right: 40px;
+  }
+  nav ul li a:hover {
+    padding: 10px 10px;
+    background: orange;
+    text-decoration: underline;
+    text-decoration: none;
+  }
+  nav ul a {
+    text-decoration: none;
+    font-size: 20px;
+    display: none;
+  }
+  .dropstart {
+    position: relative;
+    display: inline-block;
+  }
+  .fa-sape {
+    margin-left: 20px;
+  }
+  .dropdown-menus {
+    position: absolute;
+    left: -100px;
+    top: 20px;
+    background-color: orange;
+    min-width: 160px;
+    border-radius: 5px;
+    z-index: 1;
+    padding: 0;
+  }
+  .dropstart:hover .dropdown-menus {
+    display: block;
+  }
+  .dropdown-items {
+    color: rgb(255, 255, 255);
+    padding: 10px 20px;
+    text-decoration: none;
+    display: block;
+    background-color: transparent;
+  }
+  .dropdown-items:hover {
+    background-color: #a8b1b9;
+    color: rgb(255, 255, 255);
+  }
+  .dropdown-dividers {
+    height: 1px;
+    background-color: #a8b1b9;
+    margin: 5px 0;
+  }
+  .container {
+    background: #fff;
+    position: absolute;
+    top: 100px;
+  }
+  .contner-mid {
+    height: 170px;
+    overflow-y: auto;
+    overflow-x: hidden;
+    scrollbar-width: none;
+    padding: 10px;
+  }
+  .container1 {
+    background-color: #d9d9d9;
+    display: flex;
+    justify-content: space-around;
+    height: 70vh;
+    gap: 90px;
+  }
+  .container1 .page-right {
+    margin-top: 30px;
+  }
+  .container1 h1 {
+    margin: 10px;
+    font-size: 2.8em;
+  }
+  .container1 h1 strong {
+    color: orange;
+  }
+  .container1 p {
+    margin: 10px;
+    margin-left: 20px;
+  }
+  .container1 hr {
+    padding: 1px;
+    width: 20%;
+    background-color: black;
+    margin: 10px;
+  }
+  .container1 .button {
+    display: flex;
+    gap: 10px;
+  }
+  .container1 .button .btn1 {
+    background: orange;
+    border-radius: 10px;
+    margin-left: 10px;
+    margin-top: 10px;
+    width: 20%;
+    height: 7vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .container1 .button .btn1:hover {
+    background-color: orange;
+    color: white;
+  }
+  .container1 .button .btn2 {
+    border-radius: 10px;
+    margin-left: 10px;
+    margin-top: 10px;
+    width: 30%;
+    height: 7vh;
+    background-color: #29A9B2;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .container1 .button .btn2 .fa-solid {
+    margin-left: 10px;
+  }
+  .container1 .button .btn2:hover {
+    background-color: #29A9B2;
+    color: white;
+  }
+  .container2 {
+    display: flex;
+    justify-content: space-between;
+    margin: 80px;
+    margin-top: 90px;
+    gap: 50px;
+  }
+  .container2 .contaner-right {
+    background: #6e7788;
+    height: 47vh;
+    width: 70%;
+    border-radius: 10px;
+    padding: 15px;
+  }
+  .container2 h2 {
+    font-size: 1.6em;
+    color: orange;
+    margin: 10px;
+  }
+  .container2 strong {
+    color: orange;
+  }
+  .container2 .coontainer-left {
+    margin-left: 40px;
+  }
+  .container2 .paragrap {
+    margin-top: 10px;
+    padding: 10px;
+    color: white;
+  }
+  .container2 h3 {
+    color: orange;
+    margin-top: 10px;
   }
 }
 nav {
@@ -1433,7 +1797,7 @@ nav ul a {
     margin-top: -2px;
   }
   footer .media {
-    text-align: center;
+    margin-left: -30px;
     margin-top: 20px;
   }
   footer .media .fa-brands {
@@ -1542,6 +1906,188 @@ nav ul a {
   }
   .btn-read:hover {
     background: orange;
+  }
+}
+@media (max-width: 390px) {
+  nav {
+    position: fixed;
+    z-index: 38;
+    left: 0;
+    top: 0;
+    width: 100%;
+    padding: 10px;
+    background-color: rgb(255, 255, 255);
+    border-bottom: 0 2px 6px 8px solid grey;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+  nav .logo {
+    height: 10vh;
+    width: 40%;
+  }
+  nav ul {
+    display: flex;
+    gap: 20px;
+    list-style-type: none;
+    margin-right: 40px;
+  }
+  nav ul li a:hover {
+    padding: 10px 10px;
+    background: orange;
+    text-decoration: underline;
+    text-decoration: none;
+  }
+  nav ul a {
+    text-decoration: none;
+    font-size: 20px;
+    display: none;
+  }
+  .dropstart {
+    position: relative;
+    display: inline-block;
+  }
+  .fa-sape {
+    margin-left: 20px;
+  }
+  .dropdown-menus {
+    position: absolute;
+    left: -100px;
+    top: 20px;
+    background-color: orange;
+    min-width: 160px;
+    border-radius: 5px;
+    z-index: 1;
+    padding: 0;
+  }
+  .dropstart:hover .dropdown-menus {
+    display: block;
+  }
+  .dropdown-items {
+    color: rgb(255, 255, 255);
+    padding: 10px 20px;
+    text-decoration: none;
+    display: block;
+    background-color: transparent;
+  }
+  .dropdown-items:hover {
+    background-color: #a8b1b9;
+    color: rgb(255, 255, 255);
+  }
+  .dropdown-dividers {
+    height: 1px;
+    background-color: #a8b1b9;
+    margin: 5px 0;
+  }
+  .container {
+    background: #fff;
+    position: absolute;
+    top: 100px;
+  }
+  .contner-mid {
+    height: 170px;
+    overflow-y: auto;
+    overflow-x: hidden;
+    scrollbar-width: none;
+    padding: 10px;
+  }
+  .container1 {
+    background-color: #d9d9d9;
+    display: flex;
+    justify-content: space-around;
+    height: 70vh;
+    gap: 90px;
+  }
+  .container1 .page-right {
+    margin-top: 30px;
+  }
+  .container1 h1 {
+    margin: 10px;
+    font-size: 2.8em;
+  }
+  .container1 h1 strong {
+    color: orange;
+  }
+  .container1 p {
+    margin: 10px;
+    margin-left: 20px;
+  }
+  .container1 hr {
+    padding: 1px;
+    width: 20%;
+    background-color: black;
+    margin: 10px;
+  }
+  .container1 .button {
+    display: flex;
+    gap: 10px;
+  }
+  .container1 .button .btn1 {
+    background: orange;
+    border-radius: 10px;
+    margin-left: 10px;
+    margin-top: 10px;
+    width: 20%;
+    height: 7vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .container1 .button .btn1:hover {
+    background-color: orange;
+    color: white;
+  }
+  .container1 .button .btn2 {
+    border-radius: 10px;
+    margin-left: 10px;
+    margin-top: 10px;
+    width: 30%;
+    height: 7vh;
+    background-color: #29A9B2;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .container1 .button .btn2 .fa-solid {
+    margin-left: 10px;
+  }
+  .container1 .button .btn2:hover {
+    background-color: #29A9B2;
+    color: white;
+  }
+  .container2 {
+    display: flex;
+    justify-content: space-between;
+    margin: 80px;
+    margin-top: 90px;
+    gap: 50px;
+  }
+  .container2 .contaner-right {
+    background: #6e7788;
+    height: 47vh;
+    width: 70%;
+    border-radius: 10px;
+    padding: 15px;
+  }
+  .container2 h2 {
+    font-size: 1.6em;
+    color: orange;
+    margin: 10px;
+  }
+  .container2 strong {
+    color: orange;
+  }
+  .container2 .coontainer-left {
+    margin-left: 40px;
+  }
+  .container2 .paragrap {
+    margin-top: 10px;
+    padding: 10px;
+    color: white;
+  }
+  .container2 h3 {
+    color: orange;
+    margin-top: 10px;
   }
 }
 .club {
